<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="ballot_logo">Ballot logo</string>
    <string name="election_information">Election Information</string>
    <string name="follow_election">follow election</string>
    <string name="unfollow_election">unfollow election</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="voting_locations">"<u>Voting Locations</u>"</string>
    <string name="ballot_information">"<u>Ballot Information</u>"</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="go_to_twitter">Open Representative Twitter</string>
    <string name="go_to_facebook">Open Representative facebook</string>
    <string name="go_to_website">Open Representative website</string>
    <string name="representative_photo">Representative Photo</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to use location.</string>
    <string name="settings">Settings</string>
    <string name="error_enter_address_line_1">"Enter address line 1"</string>
    <string name="error_enter_city">"Enter city"</string>
    <string name="error_enter_state">"Enter state"</string>
    <string name="error_enter_zip">"Enter zip"</string>
    <string name="error_could_not_load_reps">Error: could not load representatives for area</string>
    <string name="label_fragment_launch">Launch</string>
    <string name="label_fragment_representative">My Representatives</string>
    <string name="label_fragment_voter_info">Voter Info</string>
    <string name="label_fragment_elections">Upcoming Elections</string>

</resources>
