<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/representative_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_layout"
            android:layout_width="@dimen/zero_space"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/search_title"
                style="@style/RepresentativeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:text="@{viewModel.address.line1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_space"
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:text="@{viewModel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1_edit" />

            <EditText
                android:id="@+id/city_edit"
                android:layout_width="@dimen/zero_space"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:text="@{viewModel.address.city}"
                app:layout_constraintEnd_toStartOf="@id/state_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2_edit" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="@dimen/zero_space"
                android:layout_height="@dimen/zero_space"
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city_edit"
                app:layout_constraintTop_toTopOf="@id/city_edit"
                app:stateValue="@{viewModel.address.state}" />

            <EditText
                android:id="@+id/zip_edit"
                android:layout_width="@dimen/zero_space"
                android:layout_height="wrap_content"
                android:hint="@string/zip"
                android:inputType="number"
                android:maxLength="5"
                android:text="@{viewModel.address.zip}"
                app:layout_constraintEnd_toEndOf="@id/city_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_edit" />

            <Button
                android:id="@+id/find_my_reps_button"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/zero_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/find_my_representatives"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zip_edit" />

            <Button
                android:id="@+id/use_my_location_button"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/zero_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:text="@string/use_my_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/find_my_reps_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representatives_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_space"
            android:layout_margin="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_layout">

            <TextView
                android:id="@+id/representative_title"
                style="@style/RepresentativeHeader"
                android:layout_width="@dimen/zero_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/my_representatives"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representative_recycler"
                android:layout_width="@dimen/zero_space"
                android:layout_height="@dimen/zero_space"
                android:layout_margin="@dimen/small_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loading="@{viewModel.loading}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>