<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.voterInfo.election.name}"
            app:titleTextColor="@color/white"
            tools:title="TITLE" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            app:textDate="@{viewModel.voterInfo.election.electionDay}"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/VoteHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            app:goneIfNull="@{viewModel.voterInfo.state}"
            app:layout_constraintEnd_toEndOf="@+id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/LinkStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewModel.loadUrl(viewModel.voterInfo.state.get(0).electionAdministrationBody.votingLocationFinderUrl)}"
            android:text="@string/voting_locations"
            app:goneIfNull="@{viewModel.voterInfo.state}"
            app:layout_constraintEnd_toEndOf="@+id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            style="@style/LinkStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewModel.loadUrl(viewModel.voterInfo.state.get(0).electionAdministrationBody.ballotInfoUrl)}"
            android:text="@string/ballot_information"
            app:goneIfNull="@{viewModel.voterInfo.state}"
            app:layout_constraintEnd_toEndOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address"
            app:goneIfNull="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.correspondenceAddress}" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/VoteHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/correspondence_address"
            app:layout_constraintEnd_toEndOf="@+id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintVertical_bias="0.0"
            tools:text="address" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:onClick="@{() -> viewModel.toggleFollow(viewModel.voterInfo.election,viewModel.isFollowing())}"
            android:textAllCaps="true"
            app:followText="@{viewModel.isFollowing}"
            app:goneIfNull="@{viewModel.voterInfo}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="FOLLOW ELECTION" />

        <ProgressBar
            android:id="@+id/status_loading_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:goneIfNotNull="@{viewModel.voterInfo}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>